# searchable-pdf-ocr

./: .gitignore  AGENTS.md  README.md  dslop.toml  pyproject.toml
docs/: editable-pdf-notes.md  license-and-origin.md  ocr-backend-experiments.md  ocr-decisions.md  ocr-wordbox-options.md
experiments/: .gitignore  __init__.py  clearscan-notes.md  edit-pdf-experiments.md  experiments.md  rebuild_page.py  scanfont_edit.py  targets.toml
experiments/clearscan/: .gitignore  README.md  STATUS.md  __init__.py
experiments/clearscan/tools/: __init__.py  make_fixture.py  simple_visible_edit.py  verify_pdf.py
src/ocrmypdf_paddleocr/: __init__.py  chandra_sidecar.py  cli.py  convert.py  plugin.py  rebuild.py  reconcile.py  runtime.py  schema.py  visualize.py
src/ocrmypdf_paddleocr/adapters/: chandra.py  surya.py
src/ocrmypdf_paddleocr/backends/: paddle.py  rapidocr.py
src/ocrmypdf_paddleocr/workflows/: __init__.py  compare.py  pipeline.py  searchable.py
src/searchable_pdf_ocr/: __init__.py  cli.py  constants.py  convert.py  plugin.py  rebuild.py  reconcile.py  runtime.py  visualize.py
src/searchable_pdf_ocr/adapters/: surya.py
src/searchable_pdf_ocr/backends/: __init__.py  paddle.py  rapidocr.py
src/searchable_pdf_ocr/workflows/: compare.py  pipeline.py  searchable.py
tests/: test_chandra_adapter.py  test_chandra_sidecar.py  test_cli.py  test_compare.py  test_constants.py  test_convert.py  test_pipeline.py  test_rebuild.py  test_reconcile.py  test_searchable.py  test_surya_adapter.py  test_visualize.py
