[build-system]
requires = ["uv_build>=0.11.24,<0.12.0"]
build-backend = "uv_build"

[project]
name = "searchable-pdf-ocr"
version = "0.1.0"
description = "Searchable PDF creator using RapidOCR or PaddleOCR word boxes with OCRmyPDF PDF writing."
readme = "README.md"
requires-python = ">=3.12"
license = "MPL-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "chikingsley", email = "cheez2012@gmail.com" },
]
keywords = ["ocr", "pdf", "rapidocr", "paddleocr", "ocrmypdf", "searchable-pdf"]
classifiers = [
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: Capture :: Scanners",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "httpx>=0.28.1",
    "mistralai>=2.5.0",
    "ocrmypdf>=17.7.0",
    "onnxruntime>=1.27.0",
    "paddleocr>=3.7.0",
    "paddlepaddle>=3.3.1",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "rapidocr>=3.9.0",
]

[project.scripts]
searchable-pdf-ocr = "searchable_pdf_ocr.cli:main"

[project.urls]
Homepage = "https://github.com/chikingsley/searchable-pdf-ocr"
Repository = "https://github.com/chikingsley/searchable-pdf-ocr"
"Bug Tracker" = "https://github.com/chikingsley/searchable-pdf-ocr/issues"

[project.entry-points.ocrmypdf]
searchable_pdf_ocr = "searchable_pdf_ocr.plugin"

[dependency-groups]
dev = [
    "dslop>=0.2.2",
    "mdformat>=1.0.0",
    "mdformat-gfm>=1.0.0",
    "mdformat-pyproject>=0.1.1",
    "pytest>=9.0.2",
    "ruff>=0.15.19",
    "ty>=0.0.53",
    "vulture>=2.16",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "D",
    "EM101",
    "ISC001",
    "PLR0913",
    "TC002",
    "TC003",
    "TRY003",
]

[tool.ruff.lint.per-file-ignores]
"src/searchable_pdf_ocr/cli.py" = ["T201"]
"src/searchable_pdf_ocr/reconcile.py" = ["T201"]
"tests/**/*.py" = ["PLR2004", "S101"]

[tool.mdformat]
wrap = "no"
number = false
end_of_line = "lf"
extensions = ["gfm"]

[tool.ty]
environment.python-version = "3.12"

[tool.vulture]
paths = ["src"]
min_confidence = 80
